--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <a href="#">WebStudio</a>
         <nav>
             <ul>
-                <li> <a href="">Студія</a></li>
-                <li> <a href="">Портфоліо</a></li>
-                <li> <a href="">Контакти</a></li>
+                <li> <a href="#">Студія</a></li>
+                <li> <a href="#">Портфоліо</a></li>
+                <li> <a href="#">Контакти</a></li>
             </ul>
             
         </nav>
         <ul>
-            <li> <a href="mailto">info@devstudio.com</a></li>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
@@ -30,20 +30,21 @@
 </section>
         <!--Advantages-->
 <section>
+    <!--<h2> Advantages </h2>-->
     <ul>
-        <li><h2>УВАГА ДО ДЕТАЛЕЙ</h2></li>
-           <li><p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
-        <li><h2>ПУНКТУАЛЬНІСТЬ</h2></li>
-           <li><p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
-        <li><h2>ПЛАНУВАННЯ</h2></li>
-           <li><p>Так само консультація з широким активом значною мірою зумовлює.</p></li>
-        <li><h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2></li>
-           <li><p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
+        <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
+        <li><h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
+        <li><h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p></li>
+        <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
     </ul>
 </section>
         <!--What we do?-->
 <section>
-    <h3>Чим ми займаємося</h3>
+    <h2>Чим ми займаємося</h2>
     <ul>
         <li><img src="./images/box1.jpg" alt="Programming" width="370" height="294"></li>
         <li><img src="./images/box2.jpg" alt="Testing" width="370" height="294"></li>
@@ -52,24 +53,24 @@
 </section>
         <!--Our team-->
 <section> 
-    <h3>Наша команда</h3>
+    <h2>Наша команда</h2>
     <ul>
         <li> <img src="./images/teamcard1.jpg" alt="Product Designer" width="270" height="260">
-            <h4>Ігор Дем'яненко</h4> <p>Product Designer</p></li>
+            <h3>Ігор Дем'яненко</h3> <p>Product Designer</p></li>
         <li><img src="./images/teamcard2.jpg" alt="Frontend Developer" width="270" height="260">
-            <h4>Ольга Рєпіна</h4> <p>Frontend Developer</p></li>
+            <h3>Ольга Рєпіна</h3> <p>Frontend Developer</p></li>
         <li><img src="./images/teamcard3.jpg" alt="Marketing" width="270" height="260">
-            <h4>Микола Тарасов</h4> <p>Marketing</p></li>
+            <h3>Микола Тарасов</h3> <p>Marketing</p></li>
         <li><img src="./images/teamcard4.jpg" alt="UI Designer" width="270" height="260">
-            <h4>Михайло Єрмаков</h4>  <p>UI Designer</p></li>
+            <h3>Михайло Єрмаков</h3>  <p>UI Designer</p></li>
     </ul>
 </section>
     </main>
     <footer>
+        <a href="#">WebStudio</a>
         <ul>
-            <li><a href="">WebStudio</a></li>
-            <li><address>м. Київ, пр-т Лесі Українки, 26</address>
-            <li><a href="mailto">info@devstudio.com</a></li>
+            <li><address><a href=https://goo.gl/maps/627c23BeB8VWocJj6 link="blank" rel="nofollow noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</address>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </footer>
