--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <footer>
         <a href="#">WebStudio</a>
         <ul>
-            <li><address><a href=https://goo.gl/maps/627c23BeB8VWocJj6 link="blank" rel="nofollow noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</address>
-            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><address><a href=https://goo.gl/maps/627c23BeB8VWocJj6 target="_blank" rel="nofollow noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></address>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com></a></li>
+            <li> <a href="tel:+380961111111">+38 096 111 11 11></a></li>
         </ul>
     </footer>
 </body>
