--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <a href="#" class="logo"><span class="blue">Web</span>Studio</a>
     <nav>
         <ul class="header">
-            <li> <a href="./index.html" class="header ">Студія</a></li>
+            <li> <a href="./index.html" class="header">Студія</a></li>
             <li> <a href="#" class="header current">Портфоліо</a></li>
             <li> <a href="#" class="header">Контакти</a></li>
         </ul>
@@ -32,15 +32,16 @@
     <main>
         <!--Liste-->
       <section>
+        <h1 class="visually-hidden"> Наші роботи </h1>
         <ul>
-            <li> <button type="button" class="liste-btn auto">Усі</a></li>
-            <li> <button type="button"  class="liste-btn auto">Веб-сайти</a></li>
-            <li> <button type="button"  class="liste-btn auto">Додатки</a></li>
-            <li> <button type="button"  class="liste-btn auto">Дизайн</a></li>
-            <li> <button type="button" class="liste-btn auto">Маркетинг</a></li>
+            <li> <button type="button" class="liste-btn auto">Усі</button></li>
+            <li> <button type="button"  class="liste-btn auto">Веб-сайти</button></li>
+            <li> <button type="button"  class="liste-btn auto">Додатки</button></li>
+            <li> <button type="button"  class="liste-btn auto">Дизайн</button></li>
+            <li> <button type="button" class="liste-btn auto">Маркетинг</button></li>
             
         </ul>
-           <h1 class="visually-hidden"> Наші роботи </h1>
+           
             <ul class="project-liste">
                 <li> <a href="#"><img src="./images/texnokiak.jpg" alt="Website" width= "370" height= "294" class="project-icon">
                     <h2 class="project-subtitle">Технокряк</h2>
@@ -93,13 +94,14 @@
     <!--Footer-->
     <footer class="footer">
         <a href="#" class="footer-logo"><span class="blue">Web</span>Studio</a>
-        <ul>
-            <li>
-                <address><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer"
-                        class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></address>
-            <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
-            <li> <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer"
+                        class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+                <li> <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
     </footer>
 </body>
 
