--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
     </main>
     <footer class="footer">
         <a href="#" class="footer-logo"><span class="blue">Web</span>Studio</a>
+        <address>
         <ul>
-            <li><address><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer" class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></address>
+            <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer" class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
             <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
             <li> <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
         </ul>
+        </address>
     </footer>
 </body>
 </html>
