--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </section>
         <!--Advantages-->
 <section>
-    <!--<h2> Advantages </h2>-->
+            <h2 class="visually-hidden"> Переваги </h2>
     <ul class="list">
         <li><h3 class="list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
@@ -57,8 +57,8 @@
     </ul>
 </section>
         <!--Our team-->
-<section> 
-    <h2 class="main-title">Наша команда</h2>
+<section class="main-title"> 
+    <h2>Наша команда</h2>
     <ul>
         <li> <img src="./images/teamcard1.jpg" alt="Product Designer" width="270" height="260" class="icon">
             <h3 class="main-subtitle">Ігор Дем'яненко</h3> 
