--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </ul>
 </section>
         <!--Our team-->
-<section class="main-title"> 
-    <h2>Наша команда</h2>
+<section class="team-items"> 
+    <h2 class="main-title">Наша команда</h2>
     <ul>
         <li> <img src="./images/teamcard1.jpg" alt="Product Designer" width="270" height="260" class="icon">
             <h3 class="main-subtitle">Ігор Дем'яненко</h3> 
