--- a/portfolio.html
+++ b/portfolio.html
@@ -9,31 +9,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Portfolio</title>
 </head>
 
 <body>
-<header>
+<header class="top-portfolio container">
     <a href="#" class="logo"><span class="blue">Web</span>Studio</a>
     <nav>
         <ul class="header">
             <li> <a href="./index.html" class="header">Студія</a></li>
-            <li> <a href="#" class="header current">Портфоліо</a></li>
+            <li> <a href="./portfolio.html" class="header current">Портфоліо</a></li>
             <li> <a href="#" class="header">Контакти</a></li>
         </ul>
 
     </nav>
-    <ul>
+    <ul class="info">
         <li> <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
         <li> <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
     </ul>
 </header>
     <main>
         <!--Liste-->
-      <section>
+      <section class="liste container">
         <h1 class="visually-hidden"> Наші роботи </h1>
-        <ul>
+        <ul class="container-liste-btn">
             <li> <button type="button" class="liste-btn auto">Усі</button></li>
             <li> <button type="button"  class="liste-btn auto">Веб-сайти</button></li>
             <li> <button type="button"  class="liste-btn auto">Додатки</button></li>
@@ -92,10 +93,10 @@
         </section>
     </main>
     <!--Footer-->
-    <footer class="footer">
-        <a href="#" class="footer-logo"><span class="blue">Web</span>Studio</a>
+    <footer class="footer container">
+        <a href="/index.html" class="footer-logo"><span class="blue">Web</span>Studio</a>
         <address>
-            <ul>
+            <ul class="container-footer">
                 <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer"
                         class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
