--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </section>
 </div>
         <!--Advantages-->
-<section>
+<section class="section">
             <h2 class="visually-hidden"> Переваги </h2>
     <ul class="list container">
         <li><h3 class="list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -51,31 +51,31 @@
     </ul>
 </section>
         <!--What we do?-->
-<section class="container-do container">
+<section class="container-do container section">
     <h2 class="main-title">Чим ми займаємося</h2>
     <ul class="img-list">
-        <li><img src="./images/box1.jpg" alt="Programming" width="370" height="294" class="img"></li>
-        <li><img src="./images/box2.jpg" alt="Testing" width="370" height="294" class="img"></li>
-        <li><img src="./images/box3.jpg" alt="Design" width="370" height="294" class="img"></li>
+        <li><img src="./images/box1.jpg" alt="Programming" width="370" height="294" class="img block"></li>
+        <li><img src="./images/box2.jpg" alt="Testing" width="370" height="294" class="img block"></li>
+        <li><img src="./images/box3.jpg" alt="Design" width="370" height="294" class="img block"></li>
     </ul>
 </section>
         <!--Our team-->
-<section class="team-items container"> 
+<section class="team-items container section"> 
     <h2 class="main-title-team">Наша команда</h2>
     <ul class="container-team">
-        <li> <img src="./images/teamcard1.jpg" alt="Product Designer" width="270" height="260" class="icon">
+        <li> <img src="./images/teamcard1.jpg" alt="Product Designer" width="270" height="260" class="icon block">
             <h3 class="main-subtitle">Ігор Дем'яненко</h3> 
             <p class="main-desc">Product Designer</p>
         </li>
-        <li><img src="./images/teamcard2.jpg" alt="Frontend Developer" width="270" height="260" class="icon">
+        <li><img src="./images/teamcard2.jpg" alt="Frontend Developer" width="270" height="260" class="icon block">
             <h3 class="main-subtitle">Ольга Рєпіна</h3> 
             <p class="main-desc">Frontend Developer</p>
         </li>
-        <li><img src="./images/teamcard3.jpg" alt="Marketing" width="270" height="260" class="icon">
+        <li><img src="./images/teamcard3.jpg" alt="Marketing" width="270" height="260" class="icon block">
             <h3 class="main-subtitle">Микола Тарасов</h3> 
             <p class="main-desc">Marketing</p>
         </li>
-        <li><img src="./images/teamcard4.jpg" alt="UI Designer" width="270" height="260" class="icon">
+        <li><img src="./images/teamcard4.jpg" alt="UI Designer" width="270" height="260" class="icon block">
             <h3 class="main-subtitle">Михайло Єрмаков</h3>  
             <p class="main-desc">UI Designer</p>
         </li>
