--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
 </header>
     <main>
         <!--Liste-->
-      <section class="liste container">
+      <section class="liste container section">
         <h1 class="visually-hidden"> Наші роботи </h1>
         <ul class="container-liste-btn">
             <li> <button type="button" class="liste-btn auto">Усі</button></li>
@@ -45,48 +45,57 @@
            
             <ul class="project-liste">
                 <li> <a href="#"><img src="./images/texnokiak.jpg" alt="Website" width= "370" height= "294" class="project-icon">
-                    <h2 class="project-subtitle">Технокряк</h2>
+                    <div class="project-border"><h2 class="project-subtitle">Технокряк</h2>
                     <p class="project-copy">Веб-сайт</p>
+                    </div>
                 </a>
                 </li>
                 <li><a href="#"><img src="./images/poster.neworlean.jpg"  alt="Poster" width= "370" height="294" class="project-icon">
-                    <h2 class="project-subtitle">Постер New Orlean vs Golden Star</h2>
+                    <div class="project-border"><h2 class="project-subtitle">Постер New Orlean vs Golden Star</h2>
                     <p class="project-copy">Дизайн</p>
+                    </div>
                 </a>
                 </li>
                 <li><a href="#"><img src="./images/seafood.jpg"   alt="Restaurant" width ="370" height="294" class="project-icon">
-                    <h2 class="project-subtitle">Ресторан Seafood</h2>
+                    <div class="project-border"><h2 class="project-subtitle">Ресторан Seafood</h2>
                     <p class="project-copy">Додаток</p>
+                    </div>
                 </a>
                 </li>
                 <li><a href="#"><img src="images/prime.jpg"  alt= "Project Prime" width="370" height="294" class="project-icon">
-                    <h2 class="project-subtitle">Проєкт Prime</h2>
+                    <div class="project-border"><h2 class="project-subtitle">Проєкт Prime</h2>
                     <p class="project-copy">Маркетинг</p>
+                    </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/boxes.jpg" alt="Project Box" width="370" height="294" class="project-icon">
-                    <h2 class="project-subtitle">Проєкт Boxes</h2>
+                <li><a href="#"><img src="images/boxes.jpg" alt="Project Box" width="370" height="294" class="project-icon block">
+                    <div class="project-border"><h2 class="project-subtitle">Проєкт Boxes</h2>
                     <p class="project-copy">Додаток</p>
+                    </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/inspiration.jpg" alt= "Inspiration has no Borders" width="370" height="294" class="project-icon">
-                    <h2 class="project-subtitle">Inspiration has no Borders</h2>
+                <li><a href="#"><img src="images/inspiration.jpg" alt= "Inspiration has no Borders" width="370" height="294" class="project-icon block">
+                    <div class="project-border"><h2 class="project-subtitle">Inspiration has no Borders</h2>
                     <p class="project-copy">Веб-сайт</p>
+                    </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/limited.edit.jpg" alt="Limited Edition" width= "370" height="294" class="project-icon">
-                    <h2 class="project-subtitle">Видання Limited Edition</h2>
+                <li><a href="#"><img src="images/limited.edit.jpg" alt="Limited Edition" width= "370" height="294" class="project-icon block">
+                    <div class="project-border"><h2 class="project-subtitle">Видання Limited Edition</h2>
                     <p class="project-copy">Дизайн</p>
+                    </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/lab.jpg" alt= "Limited Edition" width= "370" height="294" class="project-icon">
-                    <h2 class="project-subtitle">Проєкт LAB</h2>
+                <li><a href="#"><img src="images/lab.jpg" alt= "Limited Edition" width= "370" height="294" class="project-icon block">
+                    <div class="project-border"><h2 class="project-subtitle">Проєкт LAB</h2>
                     <p class="project-copy">Маркетинг</p>
+                    </div>
                     </a>
                 </li>
-                <li><a href="#"><img src="images/growing.business.jpg" alt="Growing Business" width= "370" height="294" class="project-icon">
-                    <h2 class="project-subtitle">Growing Business</h2>
+                <li><a href="#"><img src="images/growing.business.jpg" alt="Growing Business" width= "370" height="294" class="project-icon block">
+                    <div class="project-border"><h2 class="project-subtitle">Growing Business</h2>
                     <p class="project-copy">Додаток</p>
+                    </div>
                     </a>
                 </li>
             </ul>
