--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <header class="top-container container">
+    <header>
+        <div class="top container">
         <a href="./index.html" class="logo"><span class="blue">Web</span>Studio</a>
         <nav>
             <ul class="header">
@@ -27,19 +28,23 @@
             <li> <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
             <li> <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
     <main>
         <!--Hero-->
-        <div class="container-hero container">
+        
 <section class="hero">
+    <div class= "hero-container container">
     <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
     <button type="button" class="btn auto">Замовити послугу</button>
+    </div>
 </section>
-</div>
+
         <!--Advantages-->
-<section class="section">
+<section class="list-section">
+    <div class="container">
             <h2 class="visually-hidden"> Переваги </h2>
-    <ul class="list container">
+    <ul class="list">
         <li><h3 class="list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
         <li><h3 class="list-title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -49,40 +54,50 @@
         <li><h3 class="list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
     </ul>
+    </div>
 </section>
         <!--What we do?-->
-<section class="container-do container section">
+<section class="section">
+    <div class="container">
     <h2 class="main-title">Чим ми займаємося</h2>
     <ul class="img-list">
         <li><img src="./images/box1.jpg" alt="Programming" width="370" height="294" class="img block"></li>
         <li><img src="./images/box2.jpg" alt="Testing" width="370" height="294" class="img block"></li>
         <li><img src="./images/box3.jpg" alt="Design" width="370" height="294" class="img block"></li>
     </ul>
+    </div>
 </section>
         <!--Our team-->
-<section class="team-items container section"> 
+<section class="team-items  section"> 
+    <div class="container"> 
     <h2 class="main-title-team">Наша команда</h2>
     <ul class="container-team">
         <li> <img src="./images/teamcard1.jpg" alt="Product Designer" width="270" height="260" class="icon block">
-            <h3 class="main-subtitle">Ігор Дем'яненко</h3> 
+           <div class="team-border"><h3 class="main-subtitle">Ігор Дем'яненко</h3> 
             <p class="main-desc">Product Designer</p>
+            </div>
         </li>
         <li><img src="./images/teamcard2.jpg" alt="Frontend Developer" width="270" height="260" class="icon block">
-            <h3 class="main-subtitle">Ольга Рєпіна</h3> 
+            <div class="team-border"><h3 class="main-subtitle">Ольга Рєпіна</h3> 
             <p class="main-desc">Frontend Developer</p>
+            </div>
         </li>
         <li><img src="./images/teamcard3.jpg" alt="Marketing" width="270" height="260" class="icon block">
-            <h3 class="main-subtitle">Микола Тарасов</h3> 
+            <div class="team-border"><h3 class="main-subtitle">Микола Тарасов</h3> 
             <p class="main-desc">Marketing</p>
+            </div>
         </li>
         <li><img src="./images/teamcard4.jpg" alt="UI Designer" width="270" height="260" class="icon block">
-            <h3 class="main-subtitle">Михайло Єрмаков</h3>  
+            <div class="team-border"><h3 class="main-subtitle">Михайло Єрмаков</h3>  
             <p class="main-desc">UI Designer</p>
+            </div>
         </li>
     </ul>
+    </div>
 </section>
     </main>
-    <footer class="footer container">
+    <footer class="footer">
+        <div class="container">
         <a href="/index.html" class="footer-logo"><span class="blue">Web</span>Studio</a>
         <address>
         <ul class="container-footer">
@@ -91,6 +106,7 @@
             <li> <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
         </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
