--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-<header class="top-portfolio container">
+<header>
+    <div class="top-portfolio container">
     <a href="#" class="logo"><span class="blue">Web</span>Studio</a>
     <nav>
         <ul class="header">
@@ -29,10 +30,12 @@
         <li> <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
         <li> <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
     </ul>
+    </div>
 </header>
     <main>
         <!--Liste-->
-      <section class="liste container section">
+      <section class="liste">
+        <div class="container">
         <h1 class="visually-hidden"> Наші роботи </h1>
         <ul class="container-liste-btn">
             <li> <button type="button" class="liste-btn auto">Усі</button></li>
@@ -44,25 +47,25 @@
         </ul>
            
             <ul class="project-liste">
-                <li> <a href="#"><img src="./images/texnokiak.jpg" alt="Website" width= "370" height= "294" class="project-icon">
+                <li> <a href="#"><img src="./images/texnokiak.jpg" alt="Website" width= "370" height= "294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Технокряк</h2>
                     <p class="project-copy">Веб-сайт</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="./images/poster.neworlean.jpg"  alt="Poster" width= "370" height="294" class="project-icon">
+                <li><a href="#"><img src="./images/poster.neworlean.jpg"  alt="Poster" width= "370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Постер New Orlean vs Golden Star</h2>
                     <p class="project-copy">Дизайн</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="./images/seafood.jpg"   alt="Restaurant" width ="370" height="294" class="project-icon">
+                <li><a href="#"><img src="./images/seafood.jpg"   alt="Restaurant" width ="370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Ресторан Seafood</h2>
                     <p class="project-copy">Додаток</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/prime.jpg"  alt= "Project Prime" width="370" height="294" class="project-icon">
+                <li><a href="#"><img src="images/prime.jpg"  alt= "Project Prime" width="370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Проєкт Prime</h2>
                     <p class="project-copy">Маркетинг</p>
                     </div>
@@ -99,19 +102,22 @@
                     </a>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <!--Footer-->
-    <footer class="footer container">
-        <a href="/index.html" class="footer-logo"><span class="blue">Web</span>Studio</a>
-        <address>
-            <ul class="container-footer">
-                <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer"
-                        class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
-                <li> <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+    <footer class="footer">
+        <div class="container">
+            <a href="/index.html" class="footer-logo"><span class="blue">Web</span>Studio</a>
+            <address>
+                <ul class="container-footer">
+                    <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer"
+                            class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+                    <li> <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
