--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-<header>
-    <div class="top-portfolio container">
+<header class="border">
+    <div class="top-portfolio container border">
     <a href="#" class="logo"><span class="blue">Web</span>Studio</a>
     <nav>
         <ul class="header">
