--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="top container">
         <a href="./index.html" class="logo"><span class="blue">Web</span>Studio</a>
         <nav>
-            <ul class="header">
-                <li> <a href="./index.html" class="header current">Студія</a></li>
-                <li> <a href="./portfolio.html" class="header">Портфоліо</a></li>
-                <li> <a href="#" class="header">Контакти</a></li>
+            <ul class="nav-list">
+                <li> <a href="./index.html" class="nav-item current">Студія</a></li>
+                <li> <a href="./portfolio.html" class="nav-item">Портфоліо</a></li>
+                <li> <a href="#" class="nav-item">Контакти</a></li>
             </ul>
             
         </nav>
@@ -41,7 +41,7 @@
 </section>
 
         <!--Advantages-->
-<section class="list-section">
+<section class="list-section section">
     <div class="container">
             <h2 class="visually-hidden"> Переваги </h2>
     <ul class="list">
@@ -57,7 +57,7 @@
     </div>
 </section>
         <!--What we do?-->
-<section class="section">
+<section class="work-section section">
     <div class="container">
     <h2 class="main-title">Чим ми займаємося</h2>
     <ul class="img-list">
@@ -99,7 +99,7 @@
     <footer class="footer">
         <div class="container">
         <a href="/index.html" class="footer-logo"><span class="blue">Web</span>Studio</a>
-        <address>
+        <address class="address">
         <ul class="container-footer">
             <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer" class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
             <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
