--- a/portfolio.html
+++ b/portfolio.html
@@ -16,13 +16,13 @@
 
 <body>
 <header class="border">
-    <div class="top-portfolio container border">
+    <div class="top-portfolio container ">
     <a href="#" class="logo"><span class="blue">Web</span>Studio</a>
     <nav>
-        <ul class="header">
-            <li> <a href="./index.html" class="header">Студія</a></li>
-            <li> <a href="./portfolio.html" class="header current">Портфоліо</a></li>
-            <li> <a href="#" class="header">Контакти</a></li>
+        <ul class="nav-list">
+            <li> <a href="./index.html" class="nav-item">Студія</a></li>
+            <li> <a href="./portfolio.html" class="nav-item current">Портфоліо</a></li>
+            <li> <a href="#" class="nav-item">Контакти</a></li>
         </ul>
 
     </nav>
@@ -109,7 +109,7 @@
     <footer class="footer">
         <div class="container">
             <a href="/index.html" class="footer-logo"><span class="blue">Web</span>Studio</a>
-            <address>
+            <address class="address">
                 <ul class="container-footer">
                     <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer"
                             class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
