--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,12 @@
 
     </nav>
     <ul class="info">
-        <li> <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-        <li> <a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+        <li> <a href="mailto:info@devstudio.com" class="contact"> <svg width="16" height="12">
+                    <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>info@devstudio.com</a></li>
+        <li> <a href="tel:+380961111111" class="contact"> <svg width="10" height="16">
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg> +38 096 111 11 11</a></li>
     </ul>
     </div>
 </header>
@@ -47,55 +51,55 @@
         </ul>
            
             <ul class="project-liste">
-                <li> <a href="#"><img src="./images/texnokiak.jpg" alt="Website" width= "370" height= "294" class="project-icon block">
+                <li> <a href="#" class="project-shadow"><img src="./images/texnokiak.jpg" alt="Website" width= "370" height= "294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Технокряк</h2>
                     <p class="project-copy">Веб-сайт</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="./images/poster.neworlean.jpg"  alt="Poster" width= "370" height="294" class="project-icon block">
+                <li><a href="#" class="project-shadow"><img src="./images/poster.neworlean.jpg"  alt="Poster" width= "370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Постер New Orlean vs Golden Star</h2>
                     <p class="project-copy">Дизайн</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="./images/seafood.jpg"   alt="Restaurant" width ="370" height="294" class="project-icon block">
+                <li><a href="#" class="project-shadow"><img src="./images/seafood.jpg"   alt="Restaurant" width ="370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Ресторан Seafood</h2>
                     <p class="project-copy">Додаток</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/prime.jpg"  alt= "Project Prime" width="370" height="294" class="project-icon block">
+                <li><a href="#" class="project-shadow"><img src="images/prime.jpg"  alt= "Project Prime" width="370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Проєкт Prime</h2>
                     <p class="project-copy">Маркетинг</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/boxes.jpg" alt="Project Box" width="370" height="294" class="project-icon block">
+                <li><a href="#" class="project-shadow"><img src="images/boxes.jpg" alt="Project Box" width="370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Проєкт Boxes</h2>
                     <p class="project-copy">Додаток</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/inspiration.jpg" alt= "Inspiration has no Borders" width="370" height="294" class="project-icon block">
+                <li ><a href="#" class="project-shadow"><img src="images/inspiration.jpg" alt= "Inspiration has no Borders" width="370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Inspiration has no Borders</h2>
                     <p class="project-copy">Веб-сайт</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/limited.edit.jpg" alt="Limited Edition" width= "370" height="294" class="project-icon block">
+                <li ><a href="#" class="project-shadow"><img src="images/limited.edit.jpg" alt="Limited Edition" width= "370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Видання Limited Edition</h2>
                     <p class="project-copy">Дизайн</p>
                     </div>
                 </a>
                 </li>
-                <li><a href="#"><img src="images/lab.jpg" alt= "Limited Edition" width= "370" height="294" class="project-icon block">
+                <li><a href="#" class="project-shadow"><img src="images/lab.jpg" alt= "Limited Edition" width= "370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Проєкт LAB</h2>
                     <p class="project-copy">Маркетинг</p>
                     </div>
                     </a>
                 </li>
-                <li><a href="#"><img src="images/growing.business.jpg" alt="Growing Business" width= "370" height="294" class="project-icon block">
+                <li><a href="#" class="project-shadow"><img src="images/growing.business.jpg" alt="Growing Business" width= "370" height="294" class="project-icon block">
                     <div class="project-border"><h2 class="project-subtitle">Growing Business</h2>
                     <p class="project-copy">Додаток</p>
                     </div>
@@ -107,16 +111,37 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-        <div class="container">
-            <a href="/index.html" class="footer-logo"><span class="blue">Web</span>Studio</a>
-            <address class="address">
-                <ul class="container-footer">
-                    <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank" rel="nofollow noopener noreferrer"
-                            class="footer-address">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
-                    <li> <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
+        <div class=" footer-container container">
+            <div class="footer-logo-left">
+                <a href="/index.html" class="footer-logo"><span class="blue">Web</span>Studio</a>
+                <address class="address">
+                    <ul class="container-footer">
+                        <li><a href="https://goo.gl/maps/627c23BeB8VWocJj6" target="_blank"
+                                rel="nofollow noopener noreferrer" class="footer-address">м. Київ, пр-т Лесі Українки,
+                                26</a></li>
+                        <li> <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+                        <li> <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social">
+                <h3 class="footer-text">Приєднуйтесь</h3>
+                <ul class="footer-items">
+                    <li><a class="footer-social-styles" href="#"><svg class="footer-social-item" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg></a>
+                    </li>
+                    <li><a class="footer-social-styles" href="#"><svg class="footer-social-item" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a></li>
+                    <li><a class="footer-social-styles" href="#"><svg class="footer-social-item" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg> </a></li>
+                    <li><a class="footer-social-styles" href="#"><svg class="footer-social-item" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a></li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
