--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
     </ul>
     </div>
 </section>
-<section class="clients container">
-    <div class="section">
+<section class="clients">
+    <div class="container">
     <h2 class="main-title-team">Постійні клієнти</h2>
     <ul class="clients-items">
         <li class="clients-item-styles">
